Bug 134568 - Styles Inspector should not show the Default CS
Summary: Styles Inspector should not show the Default CS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: Style-Inspector
  Show dependency treegraph
 
Reported: 2020-07-06 13:44 UTC by Heiko Tietze
Modified: 2020-07-08 13:00 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2020-07-06 13:44:08 UTC
Ordinary text lists under CS the Default CS. This makes a) no sense as no CS has been applied, and b) provides only a limited number of attributes and it's unclear where this filter comes from.

We should omit the Default Character Style.
Comment 1 Commit Notification 2020-07-08 12:55:00 UTC
Shivam Kumar Singh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4541f80e7fabf4c7d250d8d31a1ef330540c7ffb

tdf#134568 Omit Default Character Styles

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.