tdf#134568 Omit Default Character Styles

Change-Id: Id3cdcb609c9edf3b3ed7a13d0d64a392479f81f1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/98311
Tested-by: Jenkins
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>